separate script file for generating the doc html

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ matrix:
       before_script:
         - pip install sphinx
       script:
-        - export NUMPYVER:=$(shell python3 -c "import numpy; print(numpy.version.git_revision[:10])")
-        - cd docs && GITVER=$(NUMPYVER) make html
+        - bash ./generate_html.sh
 
     - language: node_js
       script:
